# EsbRoot

./: CMakeLists.txt  Doxyfile.in  README.md  config.sh.in
EsbData/: CMakeLists.txt  DataLinkDef.h  DetectorList.h  EsbDataLinkDef.h  EsbDetectorList.h  EsbMCTrack.cxx  EsbMCTrack.h  EsbStack.cxx  EsbStack.h  EsbWCDetectorPoint.cxx  EsbWCDetectorPoint.h  EsbWCdetectorPoint.cxx  FgdDetectorPoint.cxx  FgdDetectorPoint.h  MCTrack.cxx  MCTrack.h  PMTubeHit.cxx  PMTubeHit.h  README.md  Stack.cxx  Stack.h  WCDetectorPoint.cxx  WCDetectorPoint.h
EsbData/EsbSuperFGD/: EsbFgdDetectorParameters.cxx  EsbFgdDetectorParameters.h  FgdDetectorPoint.cxx  FgdDetectorPoint.h  FgdHit.cxx  FgdHit.h  Materials.h
EsbDigitizer/: CMakeLists.txt  DigitizerLinkDef.h  README.md  WCDigitizer.cxx  WCDigitizer.h
EsbDigitizer/EsbSuperFGD/: FgdDigitizer.cxx  FgdDigitizer.h  FgdMppcDisplay.cxx  FgdMppcDisplay.h
EsbDoc/: Programming_guidelines.txt
EsbGenerators/: CMakeLists.txt  GenLinkDef.h  GenieGenerator.cxx  GenieGenerator.h  GenieNtpFluxV1.cxx  GenieNtpFluxV1.h  GenieOnlyMuonGenerator.cxx  GenieOnlyMuonGenerator.h  README.md  ROOTGeomGenieGenerator.cxx  ROOTGeomGenieGenerator.h  SimpleGenieGenerator.cxx  SimpleGenieGenerator.h  SimpleGenieOnlyMuonGenerator.cxx  SimpleGenieOnlyMuonGenerator.h
EsbGenerators/EsbSuperFGD/: FgdFluxDriver.cxx  FgdFluxDriver.h  FgdGenieGenerator.cxx  FgdGenieGenerator.h  FgdGeomAnalyzer.cxx  FgdGeomAnalyzer.h  GenieFluxDriver.cxx  GenieFluxDriver.h
EsbGeometry/: CMakeLists.txt  Cave.cxx  Cave.h  CoordinateSystem.cxx  CoordinateSystem.h  EsbCave.cxx  EsbCave.h  EsbGeoCave.cxx  EsbGeoCave.h  EsbGeometryLinkDef.h  EsbWCDetector.cxx  EsbWCDetector.h  EsbWCdetector.cxx  EsbWCdetector.h  FgdDetector.cxx  FgdDetector.h  GeoCave.cxx  GeoCave.h  GeometryLinkDef.h  OnAxisCS.cxx  OnAxisCS.h  PMTube.cxx  PMTube.h  README.md  WCDetector.cxx  WCDetector.h
EsbGeometry/EsbSuperFGD/: EsbCubeParametrisation.cxx  EsbCubeParametrisation.h  EsbCubeScintilatorConstructor.cxx  EsbCubeScintilatorConstructor.h  EsbDetectorConstruction.cxx  EsbDetectorConstruction.h  EsbFgdDetectorParameters.cxx  EsbFgdDetectorParameters.h  EsbSlabParametrization.cxx  EsbSlabParametrization.h  EsbSuperFGDConstructor.cxx  EsbSuperFGDConstructor.h  EsbSuperFGDDetectorConstruction.cxx  EsbSuperFGDDetectorConstruction.h  Materials.h  Names.h
EsbMacro/: GenieNtpFluxV1Test.C  README.md  create_pmt_geometry.C  display_event_ND.C  display_event_photons.C  display_event_pmts.C  ess_dig_fgd.C  ess_dig_gen_pics.C  ess_near_genie.C  ess_reco.C  ess_sim.C  ess_sim_fgd.C  ess_sim_genie.C  eventDisplay.C  evetest.C  evetest.root  find_ring_pmts.C  geo_full.root  params.root
EsbMacro/EsbSuperFGD/: Readme.md  ess_digitalize_2.C  ess_digitalize_2_mu_only.C  ess_generate_pics_3.C  ess_only_muon_reconstruction_5.C  ess_reconstruction_5.C  ess_simulate_1.C  ess_simulate_genie_1.C  ess_simulate_only_muons_genie_1.C  eventDisplay_4.C  muon_only_1_simulate_genie.C  muon_only_2_digitize.C  muon_only_3_reconstruction.C  muon_only_5_generate_pics.C  readMCStats.C  simulate_1_fairgenerator.C  simulate_1_fgd_genie_generator.C  simulate_1_genie_generator.C  simulate_1_simple_genie_generator.C  simulate_2_digitize.C  simulate_3_MC_lepton_stats.C  simulate_3_MC_reconstruction.C  simulate_3_reconstruction.C  simulate_4_eventDisplay.C  simulate_5_generate_pics.C  simulate_7_graph_analyze.C
EsbReconstruction/: CMakeLists.txt  ReconLinkDef.h
EsbReconstruction/EsbSuperFGD/: FgdGenFitRecon.cxx  FgdGenFitRecon.h  FgdGraphStats.cxx  FgdGraphStats.h  FgdMCEventRecord.cxx  FgdMCEventRecord.h  FgdMCGenFitRecon.cxx  FgdMCGenFitRecon.h  FgdMCLeptonStats.cxx  FgdMCLeptonStats.h  FgdMuonOnlyGenFitRecon.cxx  FgdMuonOnlyGenFitRecon.h  FgdMuonRecon.cxx  FgdMuonRecon.h  FgdReconHit.cxx  FgdReconHit.h  FgdReconTemplate.cxx  FgdReconTemplate.h  PdgFromMomentumLoss.cxx  PdgFromMomentumLoss.h  PdgFromPhotons.cxx  PdgFromPhotons.h
EsbSimulators/: CMakeLists.txt  EsbSuperFGDSimulator.cxx  EsbSuperFGDSimulator.h
EsbSimulators/EsbSuperFGD/: EsbCubeParametrisation.cxx  EsbCubeParametrisation.h  EsbCubeSD.cxx  EsbCubeSD.h  EsbCubeScintilatorConstructor.cxx  EsbCubeScintilatorConstructor.h  EsbDetectorConstruction.cxx  EsbDetectorConstruction.h  EsbEventAction.cxx  EsbEventAction.h  EsbFgdRunManager.cxx  EsbFgdRunManager.h  EsbFgdStepAction.cxx  EsbFgdStepAction.h  EsbFiberParametrisation.cxx  EsbFiberParametrisation.h  EsbFiberSD.cxx  EsbFiberSD.h  EsbFileWriter.cxx  EsbFileWriter.h  EsbParticleGunPrimaryGenerator.cxx  EsbParticleGunPrimaryGenerator.h  EsbPhysicsList.cxx  EsbPhysicsList.h  EsbPrimaryGeneratorAction.cxx  EsbPrimaryGeneratorAction.h  EsbRunAction.cxx  EsbRunAction.h  EsbSlabParametrization.cxx  EsbSlabParametrization.h  EsbSuperFGDConstructor.cxx  EsbSuperFGDConstructor.h  EsbSuperFGDDetectorConstruction.cxx  EsbSuperFGDDetectorConstruction.h
EsbTools/: CMakeLists.txt  DataLinkDef.h  EsbDefines.h  GenieAnaEventData.cxx  GenieAnaEventData.h  PMTubeGeoCreator.cxx  PMTubeGeoCreator.h  ParamReader.cxx  ParamReader.h  README.md  THStackPlus.cxx  THStackPlus.h  ToolsLinkDef.h  UtilityDefs.h  fiTQunAnaEventData.cxx  fiTQunAnaEventData.h
gconfig/: README.md  g3Config.C  g4Config.C  g4particleGun
geometry/: README.md  media.geo
prototype/: CMakeLists.txt  README.md  notification_test.txt
prototype/EsbData/: CMakeLists.txt  EsbMCTrack.cxx  EsbMCTrack.h  EsbStack.cxx  MCStackLinkDef.h
prototype/esb/: CMakeLists.txt  EsbEsb.cxx  EsbEsb.h  EsbEsbContFact.cxx  EsbEsbContFact.h  EsbEsbGeo.cxx  EsbEsbGeo.h  EsbEsbGeoPar.cxx  EsbEsbGeoPar.h  EsbEsbLinkDef.h  EsbEsbPoint.cxx  EsbEsbPoint.h  EsbWCdetector.cxx  EsbWCdetectorPoint.h
prototype/field/: CMakeLists.txt  EsbConstField.cxx  EsbConstField.h  EsbFieldCreator.cxx  EsbFieldCreator.h  EsbFieldPar.cxx  EsbFieldPar.h  FieldLinkDef.h
prototype/gconfig/: g3Config.C  g4Config.C
prototype/geometry/: media.geo
prototype/macro/: run_sim.C
prototype/passive/: CMakeLists.txt  EsbCave.h  EsbGeoCave.h  EsbMagnet.cxx  EsbMagnet.h  EsbPassiveContFact.cxx  EsbPassiveContFact.h  EsbPipe.cxx  EsbPipe.h  (+1 more)
(+27 files in other folders)
